-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8u221, 14
-
Component/s: client-libs
-
b16
-
linux
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8231876 | 13.0.2 | Dmitry Markov | P3 | Resolved | Fixed | b02 |
| JDK-8231404 | 11.0.6-oracle | Dmitry Markov | P3 | Resolved | Fixed | b01 |
| JDK-8234701 | 11.0.6 | Dmitry Markov | P3 | Resolved | Fixed | b05 |
| JDK-8241990 | openjdk8u262 | Dmitry Markov | P3 | Resolved | Fixed | b01 |
| JDK-8231458 | 8u241 | Dmitry Markov | P3 | Resolved | Fixed | b01 |
| JDK-8235061 | emb-8u241 | Dmitry Markov | P3 | Resolved | Fixed | team |
| JDK-8250622 | 7u291 | Dmitry Markov | P3 | Resolved | Fixed | b01 |
Steps to reproduce:
1. Start VNC server, (e.g. vncserver :18 -depth 16 &)
2. Start VNC client, (e.g. gvncviewer localhost:18 &)
3. Run RobotScreenCaptureTest.java, (i.e. java -Dawt.robot.gtk=false RobotScreenCaptureTest)
Note: it might be necessary to repeat step 3 several times (~10) to reproduce the issue
Actual result:
The test fails due to wrong colour, see “screenCapture_awt.robot.gtk=false.png” in the attachment
Expected result:
The test should pass, see “screenCapture_awt.robot.gtk=true.png” in the attachment
- backported by
-
JDK-8231404 Robot.createScreenCapture() fails if “awt.robot.gtk” is set to false
-
- Resolved
-
-
JDK-8231458 Robot.createScreenCapture() fails if “awt.robot.gtk” is set to false
-
- Resolved
-
-
JDK-8231876 Robot.createScreenCapture() fails if “awt.robot.gtk” is set to false
-
- Resolved
-
-
JDK-8234701 Robot.createScreenCapture() fails if “awt.robot.gtk” is set to false
-
- Resolved
-
-
JDK-8235061 Robot.createScreenCapture() fails if “awt.robot.gtk” is set to false
-
- Resolved
-
-
JDK-8241990 Robot.createScreenCapture() fails if “awt.robot.gtk” is set to false
-
- Resolved
-
-
JDK-8243890 Robot.createScreenCapture() fails if “awt.robot.gtk” is set to false
-
- Resolved
-
-
JDK-8250622 Robot.createScreenCapture() fails if “awt.robot.gtk” is set to false
-
- Resolved
-
- relates to
-
JDK-8210776 Upgrade XWD to 1.0.7
-
- Resolved
-
-
JDK-4392080 JCK interactive: jck13a test api/java_awt/interactive/RobotTests.html fail
-
- Closed
-