8230782: Robot.createScreenCapture() fails if “awt.robot.gtk” is set to false

Reviewed-by: prr, serb